# covidat-tools

./: .editorconfig  .gitattributes  .gitignore  NOTICE  README.md  dldata.toml  pyproject.toml  requirements.txt
.github/workflows/: update-data.yaml
export/: Sterbetafeln.html  covidat-old.html  data-rev.txt  monitoring.html  zscores.html
notebooks/: Misc.ipynb  Sterbetafeln.ipynb  covidat-old.ipynb  covidat.ipynb  monitoring.ipynb  zscores.ipynb
requirements/: requirements-notebooks.txt
src/: collecthydro.py  collectshortage.py  collectsvat.py  cov.py  covdata.py  dlcert.py  dldata.py  dlutil.py  dlwien.py  export.py  util.py
src/covdata/: cmpdead.py  collectshortage.py  collectwien.py  cov.py  covdata.py  export.py  requirements.txt
src/covidat/: bootstrap.py  catcsv.py  cmpdead.py  collecthydro.py  collectshortage.py  collectsvat.py  collectwien.py  cov.py  covdata.py  dlcert.py  dldata.py  dlutil.py  dlwien.py  emomo_renz.py  export.py  extractlk.py  util.py
